<resources>
    <string name="app_name">ResiApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="_4_items">4 items</string>
    <string name="reservations">Reservations</string>
    <string name="reviews">Reviews</string>
    <string name="notifications">Notifications</string>
    <string name="configurations">Configurations</string>
    <string name="resiapp">Resiapp</string>
    <string name="add_review">Add Review</string>
    <string name="add_space">Add Space</string>
    <string name="comments">Comments</string>
    <string name="rating">Rating</string>
    <string name="user">User</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="create_review">Create Review</string>
    <string name="update">Update</string>
    <string name="update_review">Update Review</string>
    <string name="delete">Delete</string>
    <string name="select_score">Select Score</string>
    <string name="select_space">Select Space</string>
    <string name="resident_name">Resident</string>
    <string name="change_photo">Change photo</string>
    <string name="new_password">New password</string>
    <string name="re_type_password">Re-type password</string>
    <string name="apartment_info">Apartment info</string>
    <string name="send_notification">Send Notification</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="create_user">Create User</string>
    <string name="forgot_password">Forgot password</string>
    <string name="security_word">Security word</string>
    <string name="exit">¿Are you sure you want to exit the application?</string>
    <string name="exit_resiapp">Exit ResiApp</string>
    <string name="delete_user">¿Are you sure you want to delete this user?</string>
    <string name="delete_review">¿Are you sure you want to delete this review?</string>
    <string name="delete_space">¿Are you sure you want to delete this space?</string>
    <string name="delete_reservation">¿Are you sure you want to delete this reservation?</string>
    <string name="delete_space_rule">¿Are you sure you want to delete this space rule?</string>
    <string name="confirm_deletion">🗑 Confirm Delete to User</string>
    <string name="confirm_deletion_reservation">🗑 Confirm Delete</string>
    <string name="confirm_deletion_review">🗑 Confirm Delete Review</string>
    <string name="confirm_deletion_space">🗑 Confirm Delete Space</string>
    <string name="confirm_deletion_space_rule">🗑 Confirm Delete Space Rule</string>
    <string name="role">Role</string>
    <string name="update_user">Update User</string>
    <string name="select_role">Select role</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="admin_items">6 items</string>
    <string name="logo">Logo</string>
    <string name="users">Users</string>
    <string name="spaces">Spaces</string>
    <string name="space_rules">Space Rules</string>
    <string name="select_user">Select User</string>
    <string name="create_space">Create Space</string>
    <string name="create_reservation">Create Reservation</string>
    <string name="space_name">Space Name</string>
    <string name="capacity">Capacity</string>
    <string name="availability">Availability</string>
    <string name="select_spacerule">Select SpaceRule</string>
    <string name="update_space">Update Space</string>
    <string name="spacerule">SpaceRule</string>
    <string name="create_spacerule">Create SpaceRule</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="timeboard">TimeBoard</string>
    <string name="date">Date</string>
    <string name="add_reservation">Add Reservation</string>
    <string name="select_date">Select Date</string>
    <string name="update_reservation">Update Reservation</string>
    <string name="add_spacerule">Add SpaceRule</string>
    <string name="messages">Messages</string>
    <string name="send_to_all_users">Send to all users</string>
    <string name="date_unavailable">Date unavailable</string>
    <string name="reservation_number">Reservation #</string>
    <string-array name="roles_array">
        <item>Resident</item>
        <item>Admin</item>
    </string-array>
</resources>