<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtDeleteTitleReservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_deletion_reservation"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/txtDeleteMessageReservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_reservation"
        android:gravity="center"
        android:paddingBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancelDeleteReservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:backgroundTint="#D32F2F"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnDeleteReservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="#FFFFFF"
            android:backgroundTint="?attr/colorPrimary"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>