<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_resiapp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/txtExitMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:gravity="center"
        android:paddingBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancelExit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:backgroundTint="#D32F2F"
            android:layout_marginEnd="8dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnLogoutExit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_marginStart="8dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>